TradeMarketing/force-app/main/default/objects/Retail_Price__c/Retail_Price__c.object-meta.xml
<CustomObject>
    <label>Retail Price</label>
    <nameField>
        <displayFormat>GTRP{0000000000}</displayFormat>
        <label>Retail Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>