TradeMarketing/force-app/main/default/objects/Retail_Price__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>This records the price of the brand family at a retail location.</description>
    <label>Price</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>