TradeMarketing/force-app/main/default/objects/Retail_Price__c/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Brand that the price is being recorded for</description>
    <label>Product Brand</label>
    <referenceTo>Product_Brand__c</referenceTo>
    <relationshipLabel>Retail Prices</relationshipLabel>
    <relationshipName>Retail_Prices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>