TradeMarketing/force-app/main/default/objects/Retail_Price__c/fields/Retail_Price_Archive__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price_Archive__c</fullName>
    <label>Retail Price Archive</label>
    <referenceTo>Retail_Price_Archive__c</referenceTo>
    <relationshipLabel>Retail Prices</relationshipLabel>
    <relationshipName>Retail_Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>