TradeMarketing/force-app/main/default/objects/Retail_Price__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the price recorded was a sale price run by the retailer</description>
    <label>Sale Price</label>
    <type>Checkbox</type>
</CustomField>